force-app/main/default/objects/CS_Incentive_Program__c/CS_Incentive_Program__c.object-meta.xml
<CustomObject>
    <label>CS Incentive Program</label>
    <nameField>
        <displayFormat>CSIP-{00000}</displayFormat>
        <label>CS Incentive Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Incentive Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>