force-app/main/default/objects/CS_Incentive_Program__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>