force-app/main/default/objects/CS_Incentive_Program__c/fields/CS_Attribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Amount__c</fullName>
    <label>CS Attribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>