force-app/main/default/objects/CS_Incentive_Program__c/fields/CS_Incentive_Tier__c.field-meta.xml
<CustomField>
    <fullName>CS_Incentive_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Incentive Tier</label>
    <referenceTo>CS_Incentive_Tier__c</referenceTo>
    <relationshipLabel>CS Incentive Program</relationshipLabel>
    <relationshipName>CS_Incentive_Program</relationshipName>
    <type>Lookup</type>
</CustomField>