force-app/main/default/objects/CS_Incentive_Program__c/fields/Current_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Current_Incentive__c</fullName>
    <formula>IF( Team_Threshold_Met__c , IF( CS_Attribution_Amount__c  &gt;=  Tier_1_Threshold__c ,  Tier_1_Bonus__c ,0) , 0)+IF( Team_Threshold_Met__c , IF( CS_Attribution_Amount__c  &gt;=  Tier_2_Threshold__c ,  Tier_2_Bonus__c ,0) , 0)+IF( Team_Threshold_Met__c , IF( CS_Attribution_Amount__c  &gt;=  Tier_3_Threshold__c ,  Tier_3_Bonus__c ,0) , 0)+IF( Team_Threshold_Met__c , IF( CS_Attribution_Amount__c  &gt;=  Tier_4_Threshold__c ,  Tier_4_Bonus__c ,0) , 0)+ Team_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>