force-app/main/default/objects/CS_Incentive_Program__c/fields/Team_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Team_Threshold_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Threshold Met</label>
    <type>Checkbox</type>
</CustomField>