force-app/main/default/objects/CS_Incentive_Program__c/fields/Tier_2_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Bonus__c</fullName>
    <label>Tier 2 Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>