force-app/main/default/objects/CS_Incentive_Program__c/fields/Tier_3_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Bonus__c</fullName>
    <label>Tier 3 Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>