force-app/main/default/objects/CS_Incentive_Program__c/fields/Tier_4_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier_4_Threshold__c</fullName>
    <label>Tier 4 Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>